<resources>
    <string name="app_name">AndroidXMLJSON</string>

    <string name="action_settings">Settings</string>
    <string name="location">Location</string>
    <string name="country">Country:</string>
    <string name="temperature">Temperature:</string>
    <string name="humidity">Humidity:</string>
    <string name="pressure">Pressure:</string>
    <string name="weather">Click for load weather</string>
</resources>
