<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <TextView
        android:id="@+id/tvURL"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="15dp"
        android:text="@string/location"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/edtURL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/tvURL"
        android:layout_toRightOf="@+id/tvTemperature"
        android:ems="10"
        android:singleLine="true"
        android:text="hanoi" />

    <TextView
        android:id="@+id/tvCountry"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvURL"
        android:layout_below="@+id/tvURL"
        android:layout_marginTop="68dp"
        android:text="@string/country"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/tvTemperature"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvCountry"
        android:layout_marginTop="19dp"
        android:text="@string/temperature"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/tvHumidity"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvTemperature"
        android:layout_below="@+id/tvTemperature"
        android:layout_marginTop="32dp"
        android:text="@string/humidity"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/tvPressure"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvHumidity"
        android:layout_below="@+id/tvHumidity"
        android:layout_marginTop="21dp"
        android:text="@string/pressure"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <EditText
        android:id="@+id/edtCountry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tvTemperature"
        android:layout_toRightOf="@+id/tvTemperature"
        android:ems="10">

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/edtTemperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tvTemperature"
        android:layout_alignBottom="@+id/tvTemperature"
        android:layout_toRightOf="@+id/tvTemperature"
        android:ems="10" />

    <EditText
        android:id="@+id/edtHumidity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tvPressure"
        android:layout_toRightOf="@+id/tvTemperature"
        android:ems="10" />

    <EditText
        android:id="@+id/edtPressure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tvPressure"
        android:layout_alignBottom="@+id/tvPressure"
        android:layout_toRightOf="@+id/tvTemperature"
        android:ems="10" />

    <Button
        android:id="@+id/btnLoadContent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/edtCountry"
        android:layout_below="@+id/edtURL"
        android:onClick="open"
        android:text="@string/weather" />

</RelativeLayout>